EN-1580: backend Authentication Handlers
