# api/handlers/auth.py
@@ -1,13 +1,12 @@
 import json
-import logging
 import sys
-import time
+from typing import Optional
 
 import sentry_sdk
 from tornado.web import Finish
 
 from common.config import config
-from common.handlers.base import BaseHandler, JwtAuthType
+from common.handlers.base import BaseHandler, JwtAuthType, TornadoRequestHandler
 from common.models import WebResponse
 
 log = config.get_logger()
@@ -16,9 +15,9 @@ log = config.get_logger()
 def log_dict_handler(
     log_level: str,
     handler_class: BaseHandler,
-    account_id: str = None,
-    role_name: str = None,
-    tenant: str = None,
+    account_id: Optional[str] = None,
+    role_name: Optional[str] = None,
+    tenant: Optional[str] = None,
     exc: dict = {},
     **kwargs: dict,
 ):
@@ -36,7 +35,6 @@ def log_dict_handler(
     log_data = {
         "function": f"{__name__}.{handler_class.__class__.__name__}.{sys._getframe().f_code.co_name}",
         "user-agent": handler_class.request.headers.get("User-Agent"),
-        "request_id": handler_class.request_uuid,
         "account_id": account_id if account_id else "unknown",
         "role_name": role_name if role_name else "unknown",
         "tenant": tenant,
@@ -44,8 +42,11 @@ def log_dict_handler(
     log_data.update(kwargs)  # Add any other log data
     if log_level.upper() in ["ERROR", "CRITICAL", "EXCEPTION"]:
         log_data["exception"] = exc
-    getattr(log, getattr(logging, log_level.upper()))(log_data)
-    sentry_sdk.capture_exception(tags={"user": handler_class.user})
+    # TODO: @mdaue to fix:
+    # TypeError: getattr(): attribute name must be string
+    # getattr(log, getattr(logging, log_level.upper()))(log_data)
+    log.debug(log_data)
+    sentry_sdk.capture_exception()
 
 
 class AuthHandler(BaseHandler):
@@ -76,7 +77,7 @@ class AuthHandler(BaseHandler):
         self.write(
             {
                 "authCookieExpiration": self.auth_cookie_expiration,
-                "currentServerTime": int(time.time()),
+                "user": self.user,
             }
         )
 
@@ -84,46 +85,14 @@ class AuthHandler(BaseHandler):
         self.write(
             {
                 "authCookieExpiration": self.auth_cookie_expiration,
-                "currentServerTime": int(time.time()),
+                "user": self.user,
             }
         )
 
 
-class CognitoAuthHandler(AuthHandler):
+class CognitoAuthHandler(BaseHandler):
     def check_xsrf_cookie(self) -> None:
         pass
-
-    async def get(self, *args, **kwargs):
-        log_dict_handler("info", self)
-        tenant = self.get_tenant_name()
-        user_pool_region = config.get_tenant_specific_key(
-            "secrets.cognito.config.user_pool_region", tenant, config.region
-        )
-        if not user_pool_region:
-            raise Exception("User pool region is not defined")
-        user_pool_id = config.get_tenant_specific_key(
-            "secrets.cognito.config.user_pool_id", tenant
-        )
-        if not user_pool_id:
-            raise Exception("User pool is not defined")
-        client_id = config.get_tenant_specific_key(
-            "secrets.cognito.config.user_pool_client_id", tenant
-        )
-        if not client_id:
-            raise Exception("Client ID is not defined")
-
-        tenant_details = {
-            "client_id": client_id,
-            "user_pool_id": user_pool_id,
-            "user_pool_region": user_pool_region,
-        }
-        self.write(
-            WebResponse(
-                success="success",
-                status_code=200,
-                data=tenant_details,
-            ).json(exclude_unset=True, exclude_none=True)
-        )
 
     async def post(self, *args, **kwargs):
         await self.authorization_flow()
@@ -158,10 +127,51 @@ class CognitoAuthHandler(AuthHandler):
         self.write(
             {
                 "authCookieExpiration": self.auth_cookie_expiration,
-                "currentServerTime": int(time.time()),
+                "user": self.user,
             }
         )
 
     async def options(self, *args, **kwargs):
         self.set_status(204)
         self.finish()
+
+
+class UnauthenticatedAuthSettingsHandler(TornadoRequestHandler):
+    def check_xsrf_cookie(self) -> None:
+        pass
+
+    async def get(self, *args, **kwargs):
+        log_dict_handler("info", self)
+        tenant = self.get_tenant_name()
+        user_pool_region = config.get_tenant_specific_key(
+            "secrets.cognito.config.user_pool_region", tenant, config.region
+        )
+        if not user_pool_region:
+            raise Exception("User pool region is not defined")
+        user_pool_id = config.get_tenant_specific_key(
+            "secrets.cognito.config.user_pool_id", tenant
+        )
+        if not user_pool_id:
+            raise Exception("User pool is not defined")
+        client_id = config.get_tenant_specific_key(
+            "secrets.cognito.config.user_pool_client_id", tenant
+        )
+        if not client_id:
+            raise Exception("Client ID is not defined")
+
+        tenant_details = {
+            "client_id": client_id,
+            "user_pool_id": user_pool_id,
+            "user_pool_region": user_pool_region,
+        }
+        # if config.get_tenant_specific_key("auth.get_user_by_saml", tenant, False):
+        #     pass
+        # if config.get_tenant_specific_key("auth.get_user_by_oidc", tenant, False):
+        #     pass
+        self.write(
+            WebResponse(
+                success="success",
+                status_code=200,
+                data=tenant_details,
+            ).json(exclude_unset=True, exclude_none=True)
+        )
