# common/models.py
@@ -1,6 +1,6 @@
 # generated by datamodel-codegen:
 #   filename:  swagger.yaml
-#   timestamp: 2022-12-19T22:07:13+00:00
+#   timestamp: 2022-12-26T21:23:53+00:00
 
 from __future__ import annotations
 
@@ -9,7 +9,7 @@ from enum import Enum
 from typing import Any, Dict, List, Optional, Union
 from uuid import UUID
 
-from pydantic import Field, conint, constr
+from pydantic import EmailStr, Field, conint, constr
 
 from common.lib.pydantic import BaseModel
 
@@ -1259,6 +1259,12 @@ class IambicListResponse(BaseModel):
     rejected_by: Optional[str] = None
     approved_by: Optional[List[str]] = None
     allowed_approvers: Optional[List[str]] = None
+
+
+class UserLoginRequest(BaseModel):
+    email: EmailStr
+    password: str
+    mfa_token: Optional[str] = None
 
 
 class RequestModel(BaseModel):
